--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<!-- <section class="panel spotlight medium right" id="first">
 								<div class="content span-7"> -->
 									<h2 class="major">Demonstrated history of working in diverse interdisiplinary domains</h2>
-									<p>Significant amount of experience in fintech, healthcare, security, and marketing communications, but I have worked on projects in just about every major industry.<br><br><strong>Why does it matter?</strong><br><br>My broader exposure to solutions in different fields helps me come up with the best solutions in your field.</p>
+									<p>Significant amount of experience in fintech, healthcare, security, and marketing communications, but I have worked on projects in just about every major industry.<br><br><strong>Why does it matter?</strong><br>My broader exposure to solutions in different fields helps me come up with the best solutions in your field.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/bigfoot.jpg" alt="" />
