--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 									<br><a href="https://a.co/d/e6DgQSv">https://a.co/d/e6DgQSv</a></strong></p>
 									<ul>
 									<li>Senior Generative AI Data Scientist | Technical Manager | GenAI Author</li>
-									<li>15+ years experience building technologies, primarily in </strong>generative AI and mobile.</strong>
+									<li>15+ years building technologies in </strong>generative AI and mobile.</strong>
 									<li>Master's in Applied Data Science from the University of Michigan</li>
 									<li>Master's in Business Administration (MBA) from Babson College</li>
 									<li>Specialities: Generative AI | Retrieval Augmented Generation (RAG) | large model training & fine-tuning</li>
